agrego .gitignore secciones de tienda y servicios

--- a/sobremi.html
+++ b/sobremi.html
@@ -52,14 +52,16 @@
         <div class="sobreMi-grid-container">
             <div class="fraseUno">
                 <p class="text-uppercase">Diseñamos tu marca y tu sitio web para que se destaque entre la multitud.</p>
-                <button type="button" class="btn btn-secondary">Secondary</button>
+                <button type="button" class="btn btn-secondary">VER +</button>
             </div>
             <div class="fraseDos">
                 <p class="text-uppercase">
                     También te la hacemos fácil y ahora podés diseñar vos mismo tu propio sitio web en nuestra Tienda.</p>
+                    <button type="button" class="btn btn-secondary">VER +</button>
             </div>
             <div class="fraseTres">
                 <p class="text-uppercase"> Gestionamos y creamos contenido único y hermoso para tus redes sociales!</p>
+                <button type="button" class="btn btn-secondary">VER +</button>
             </div>
     </section>
     <footer>
