--- a/tienda.html
+++ b/tienda.html
@@ -3,12 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tienda</title>
-    <link rel="stylesheet" type="text/css" href="css/estilosCSS.css">
+    <title>BrainiacSolutions</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&family=Patua+One&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-</head>
+    <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/estilosCSS.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <meta name="description" content=" Brainiac Solutions es un estudio creativo que te acompaña en la cración y evolución de tus proyectos para darles la forma estética y comunicacional que necesitan. Te ofrecemos múltiples servicios como diseño gráfico, web y social media, buscando la mejor propuesta que se adapte a vos.">
+    <meta name="keywords" content=" estudio creativo, estudio de diseño grafico, diseño web, social media">
 
 <body>
     <header>
@@ -28,20 +31,99 @@
     <section class="contenedorServicios">
         <div class="columnasTres">
             <h5>diseño gráfico</h5>
-            <img src="imagenes/web1.png">
-            <p>Diseño de marca,identidad corporativa, diseño editorial, logotipos, tarjetas personales, revistas, folletos, flyers, catálogos, brochures, ilustraciones y otros elementos digitales que <strong>llevarán a tu marca al siguiente nivel y la ayudarán a expandirse</strong>.</p>
+            <img src="imagenes/graphic1.png">
+            <p class="titulo" style="text-align:center;white-space:pre-wrap;">Necesitas que tu logo y tu marca tengan más onda? ahora tenemos un pack genial para tu emprendimiento.</p>
         </div>
         <div class="columnasTres">
-            <img src="imagenes/web2.png">
+            <img src="imagenes/socialmedia1.png">
             <h5>social media</h5>
-            <p>Creación, diseño y gestión de redes sociales. Creación de una comunidad, estrategia de comunicación, redacción creativa, community managment, fidelización a tu alcance.</p>
+            <p class="titulo" style="text-align:center;white-space:pre-wrap;">No sabes que contenido poner en tus redes? con nuestro pack de imágenes y flyers te la hacemos más fácil.</p>
         </div>
         <div class="columnasTres">
             <h5>diseño web</h5>
             <img src="imagenes/web3.png">
-            <p>Diseño de tu sitio web que combina con tu marca pero que también funciona perfectamente para su negocio.</p>
+            <p class="titulo" style="text-align:center;white-space:pre-wrap;"> Ahora te brindamos el template que necesitas para que tu sitio hable de vos.</p>
         </div>
     </section>
+    <br>
+    <!-- Empieza Tabla -->
+    <section class="tabla">
+        <h4>Nuestros packs son los que tu emprendimiento necesita!</h4>
+        <div class="tablax4">
+            <div class="caja-precio">
+                <div class="icono-precio"><i class="fas fa-pen"></i>
+</div>    
+            </div>
+            <div><h2>Pack Gráfico</h2></div>
+            <div class="precio-1"><span class="dolar">US$</span>5<span class="mes">/mensuales</span></div>
+            <div>
+                <ul class="lista-precios">
+                    <li class="lista-espacios">Diseño de logo</li>
+                    <li class="lista-espacios">Diseño de tarjetas personales</li>
+                    <li class="lista-espacios">Diseño de flyers para redes sociales</li>   
+                </ul>
+            </div>
+            <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a> 
+            </div>
+        </div>
+
+        <div class="tablax4">
+            <div class="caja-precio">
+                <div class="icono-precio"><i class="fas fa-camera-retro"></i>
+</div>    
+            </div>
+            <div><h2>Pack Redes</h2></div>
+            <div class="precio-1"><span class="dolar">US$</span>15<span class="mes">/mensuales</span></div>
+            <div>
+                <ul class="lista-precios">
+                    <li class="lista-espacios">Gestión y contenido de redes sociales</li>
+                    <li class="lista-espacios">Diseño de flyers y videos mensuales </li> 
+                    <li class="lista-espacios">Producción fotográfica para redes sociales</li> 
+                </ul>
+            </div>
+            <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a> 
+            </div>
+        </div>
+
+        <div class="tablax4">
+            <div class="caja-precio">
+                <div class="icono-precio"><i class="fas fa-bolt"></i>
+</div>    
+            </div>
+           <div><h2>Pack Web</h2></div>
+            <div class="precio-1"><span class="dolar">US$</span>35<span class="mes">/mensuales</span></div>
+            <div>
+                <ul class="lista-precios">
+                    <li class="lista-espacios">Diseño del sitio</li>
+                    <li class="lista-espacios">Desarrollo del sitio</li>
+                    <li class="lista-espacios">SEO & Google Analytics</li>   
+                </ul>
+            </div>
+            <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a> 
+            </div>
+        </div>
+
+        <div class="tablax4">
+            <div class="caja-precio">
+                <div class="icono-precio"><i class="far fa-gem"></i>
+</div>    
+            </div>
+            <div><h2>Pack Premium</h2></div>
+            <div class="precio-1"><span class="dolar">US$</span>125<span class="mes">/mensuales</span></div>
+            <div>
+                <ul class="lista-precios">
+                    <li class="lista-espacios">Diseño de logo</li>
+                    <li class="lista-espacios">Diseño de flyers para redes sociales</li>
+                    <li class="lista-espacios">Diseño y desarrollo de sitio web </li>   
+                </ul>
+            </div>
+            <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a> 
+            </div>
+        </div>  
+    </section>
+    <br>
+    <br>
+    <br>
     <br>
     <footer>
         <div class="footerInfo">
