estilos de servicios

--- a/servicios.html
+++ b/servicios.html
@@ -98,22 +98,22 @@
             <section>
                 <div class="grid-container-gifs">
                     <div class="gifUno">
-                        <a href="" title=""></a>
+                        <img width="100%" height="100%" src="imagenes/identidad.gif">
                     </div>
                     <div class="gifDos">
-                        <a href="" title=""></a>
+                        <img width="100%" height="100%" src="imagenes/redes.gif">
                     </div>
                     <div class="gifTres">
-                        <a href="" title=""></a>
+                        <img width="100%" height="100%" src="imagenes/webs.gif">
                     </div>
                     <div class="gifCuatro">
-                        <a href="" title=""></a>
+                        <img width="100%" height="100%" src="imagenes/graphiclogo.gif">
                     </div>
                     <div class="gifCinco">
-                        <a href="" title=""></a>
+                        <img width="100%" height="100%" src="imagenes/patterns.gif">
                     </div>
                     <div class="gifSeis">
-                        <a href="" title=""></a>
+                        <img width="100%" height="100%" src="imagenes/graphicweb.gif">
                     </div>
                 </div>
             </section>
