--- a/sobremi.html
+++ b/sobremi.html
@@ -51,8 +51,9 @@
         <h4>Te ofrecemos distintos servicios que se adaptan a vos:</h4>
         <div class="sobreMi-grid-container">
             <div class="fraseUno">
-                <p class="text-uppercase">Diseñamos tu marca y tu sitio web para que se destaque entre la multitud.</p>
-                <button type="button" class="btn btn-secondary">VER +</button>
+                <p class="text-uppercase">
+                    Diseñamos tu marca y tu sitio web para que se destaque entre la multitud.</p>
+                    <button type="button" class="btn btn-secondary">VER +</button>
             </div>
             <div class="fraseDos">
                 <p class="text-uppercase">
