--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
     <br>
     <!-- Contenedor grilla y hover -->
     <section class="contenedorPortfolio">
-        <h5> Portfolio</h5>
+        <h5> Descubrí el pack que mejor se adapta a tu emprendimiento</h5>
         <div class="col-md-15">
             <div class="portfolio-item">
                 <div class="portfolio-item-content">
-                    <h2>Diseño Gráfico</h2>
+                     <a href="tienda.html"><h2>Diseño Gráfico</h2></a>
                 </div>
                 <img src="imagenes/logo2.png" class="img-thumbnail" alt="">
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-item-content">
-                    <h2>Social Media</h2>
+                    <a href="tienda.html"><h2>Social Media</h2></a>
                 </div>
                 <img src="imagenes/social media2.png" class="img-thumbnail" alt="">
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-item-content">
-                    <h2>Diseño Web</h2>
+                     <a href="tienda.html"><h2>Diseño Web</h2></a>
                 </div>
                 <img src="imagenes/desing web2.png" class="img-thumbnail" alt="">
             </div>
