--- a/tienda.html
+++ b/tienda.html
@@ -60,7 +60,7 @@
                 <ul class="lista-precios">
                     <li class="lista-espacios">Diseño de logo</li>
                     <li class="lista-espacios">Diseño de tarjetas personales</li>
-                    <li class="lista-espacios">Diseño de flyers para redes sociales</li>   
+                    <li class="lista-espacios">Diseño de flyers</li>   
                 </ul>
             </div>
             <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a> 
@@ -76,9 +76,9 @@
             <div class="precio-1"><span class="dolar">US$</span>15<span class="mes">/mensuales</span></div>
             <div>
                 <ul class="lista-precios">
-                    <li class="lista-espacios">Gestión y contenido de redes sociales</li>
-                    <li class="lista-espacios">Diseño de flyers y videos mensuales </li> 
-                    <li class="lista-espacios">Producción fotográfica para redes sociales</li> 
+                    <li class="lista-espacios">Contenido de redes sociales</li>
+                    <li class="lista-espacios">Diseño de flyers mensuales </li> 
+                    <li class="lista-espacios">Producción fotográfica</li> 
                 </ul>
             </div>
             <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a> 
@@ -121,10 +121,6 @@
             </div>
         </div>  
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
     <footer>
         <div class="footerInfo">
             <div class="contenedor">
