correccion sobremi imagen rota

--- a/sobremi.html
+++ b/sobremi.html
@@ -38,7 +38,7 @@
                 aportar a nuestros clientes la mejor manera de ayudarlos a impulsar su marca y crear sitios web hermosos y funcionales, ¡y nos encanta hacer lo que hacemos!
             </p>
             <div>
-                <img width="100%" height="100%" src="imagenes/person.jpg">
+                <img width="100%" height="100%" src="imagenes/Person.jpg">
             </div>
         </article>
     </section>
